# broccoli_bot_2018

./: .gitignore  CMakeLists.txt  README.md  broccolibot_rewrite_structure.txt  config.yml  meson.build
deprecated/: cv_rs_wrapper.cpp  cv_rs_wrapper.hpp  legacy_loader.cpp  saving.h
include/: bgrd_frame.hpp  bgrd_frame_source.hpp  broccoli_vision.hpp  declarative_broccoli_locator.hpp  declarative_broccoli_locator_visuals.hpp  folder_bgrdfs.hpp  frame_io.hpp  histogram.hpp  histogram_visuals.hpp  legacy_loader.hpp  motion_server_connection.hpp  object_locator.hpp  raw_video.hpp  realsense_bgrdfs.hpp  rgbd_frame.hpp  rgbd_frame_source.hpp  saving.h  wo_socket.hpp
src/: bgrd_frame.cpp  bgrd_frame_source.cpp  broccoli_vision.cpp  cv_rs_wrapper.cpp  declarative_broccoli_locator.cpp  declarative_broccoli_locator_visuals.cpp  folder_bgrdfs.cpp  frame_io.cpp  legacy_loader.cpp  main.cpp  motion_server_connection.cpp  raw_video.cpp  realsense_bgrdfs.cpp  wo_socket.cpp
